# fast-agent

./: .gitmodules  AGENTS.md  CHANGES.md  README.md  handover.md  hatch_build.py  pyproject.toml
.github/workflows/: checks.yml
docs/: .gitignore  generate_plugin_api_docs.py  generate_reference_docs.py  generate_social_cards.py  visual_assessment.schema.json  zensical.toml
docs-internal/: ACP_TERMINAL_SUPPORT.md  ACP_TESTING.md  anthropic-structured.md  structured-docs.md
docs/agent/: agent.py  fastagent.config.yaml
docs/docs/: getting_started.md  index.md
docs/docs/_generated/: README.md  model_aliases_aliyun.md  model_aliases_anthropic.md  model_aliases_codexresponses.md  model_aliases_deepseek.md  model_aliases_google.md  model_aliases_groq.md  model_aliases_hf.md  model_aliases_openai.md  model_aliases_responses.md  model_aliases_xai.md  models_reference.md  plugin_api.md  request_params_reference.md  tui_runtime_reference.md  workflows_reference.md
docs/docs/acp/: customizing_agents.md  index.md
docs/docs/agents/: defining.md  index.md  instructions.md  plugins.md  prompting.md  running.md  skills.md  tool_runner.md  workflows.md
docs/docs/getting_started/: installation.md
docs/docs/guides/: batch-processing.md  codex.md  core-concepts.md  hf-dev.md  privacy_filter.md  structured-outputs.md  tui.md
docs/docs/javascripts/: asciinema-demos.js
docs/docs/mcp/: elicitations.md  index.md  mcp-oauth.md  mcp-server.md  mcp-ui.md  mcp_display.md  openai-apps-sdk.md  resources.md  state_transfer.md  types.md
docs/docs/models/: index.md  internal_models.md  llm_providers.md  model_overlays.md  models_reference.md
docs/docs/oauth/: client.json
docs/docs/ref/: about.md  agent_cards.md  azure-config.md  batch.md  class_reference.md  cmd_switches.md  config_file.md  docs_automation.md  export_command.md  fast_agent_ai_articles.md  generated_docs.md  go_command.md  open_telemetry.md
docs/docs/stylesheets/: fast-agent.css
docs/docs/welcome/: index.md
docs/overrides/: main.html
docs/social_cards/: contact-sheet.html  styles.css  template.html  themes.yml
examples/bedrock/: fast-agent.yaml
examples/markdown/: demo_markdown.md  fast-agent-theme.ini  high-contrast.ini  yellow-headings-soft.ini  yellow-headings.ini
examples/mcp/elicitations/: fast-agent.secrets.yaml.example
examples/mcp/structured-content-preview/: example.py  fast-agent.yaml  preview_server.py
examples/mcp/vision-examples/: fast-agent.yaml
examples/new-api/: textual_markdown_demo.py
examples/openapi/: fast-agent.yaml
examples/otel/: fast-agent.yaml
examples/rag/: vertex-rag.py
examples/researcher/: fast-agent.yaml
examples/setup/: .gitignore  agent.py  fast-agent.yaml
examples/tensorzero/: agent.py  simple_agent.py
examples/workflows/: agents_as_tools_extended.py  maker.py
examples/workflows-md/hf-api-agent/: fast-agent.yaml
examples/workflows-md/maker/: classifier.md
plan/: 03-07-structured-handling.md  plugin-spec.md
plan/done/: agent-card-origin-review.md  fastagent-acp-sessions-without-acp.md  fastagent-agent-per-chat-session.md  fastagent-multi-instance-risks.md  fix-async-event-bus.md  hook-tool-declarative.md
publish/hf-inference-acp/: README.md  pyproject.toml
resources/shared/: model_overlays.md  smart_agent_cards.md  smart_prompt.md
scripts/: acp_structured_output_smoke.py  benchmark_privacy_filter.py  docs.py  docs_assets.py  docs_terminal_capture.py  docs_visual_assess.py  probe_structured_support_matrix.py  session_usage_bounce.py  shell_runtime_stress.sh  test_package_install.sh  test_plugins_cli_env.sh
src/fast_agent/: config.py  constants.py  context.py  event_progress.py  home.py  interfaces.py  mcp_server_registry.py  paths.py  tool_activity_presentation.py
src/fast_agent/acp/: acp_context.py  command_io.py  content_conversion.py  filesystem_runtime.py  protocols.py  slash_commands.py  terminal_runtime.py  tool_permissions.py
src/fast_agent/agents/: agent_types.py  llm_agent.py  llm_decorator.py  mcp_agent.py  smart_agent.py  tool_agent.py  tool_runner.py
src/fast_agent/batch/: __init__.py  agent_card.py  input.py  output.py  resume.py  structured.py  summary.py  template.py  traces.py
src/fast_agent/cards/: manager.py  service.py
src/fast_agent/cli/: __main__.py  command_support.py  constants.py  env_helpers.py  main.py  shared_options.py  update_check.py
src/fast_agent/command_actions/: __init__.py  accessors.py  config.py  loader.py  message_utils.py  models.py  registry.py  runtime.py
src/fast_agent/commands/: command_catalog.py  command_discovery.py  context.py  model_capabilities.py  model_details.py  protocols.py  session_export_help.py  session_summaries.py  shared_command_intents.py  status_summaries.py  tool_summaries.py
src/fast_agent/core/: agent_app.py  agent_card_loader.py  agent_card_rules.py  agent_card_validation.py  core_app.py  default_agent.py  direct_decorators.py  direct_factory.py  fastagent.py  instruction.py  instruction_refresh.py  instruction_source.py  instruction_utils.py  model_resolution.py  prompt_templates.py  template_render.py  validation.py
src/fast_agent/history/: tool_activities.py
src/fast_agent/hooks/: hook_context.py  hook_messages.py  session_history.py
src/fast_agent/human_input/: simple_form.py
src/fast_agent/io/: path_uri.py  source_resolver.py
src/fast_agent/llm/: fastagent_llm.py  hf_inference_lookup.py  llamacpp_discovery.py  model_database.py  model_factory.py  model_info.py  model_overlays.py  model_reference_config.py  model_selection.py  provider_types.py  reasoning_effort.py  request_params.py  resolved_model.py  structured_schema.py  task_budget.py  tool_tracking.py  usage_tracking.py
tests/support/: command_surface.py
tests/unit/: test_hatch_build.py
(+481 files in other folders)
