[project]
name = "fast-agent-mcp"
version = "0.7.12"
description = "Define, Prompt and Test MCP enabled Agents and Workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Shaun Smith", email = "fastagent@llmindset.co.uk"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.13.5,<3.15"
dependencies = [
    "fastapi==0.136.1",
    "fastmcp==3.3.1",
    "mcp==1.27.1",
    "pydantic-settings==2.14.1",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "typer==0.25.1",
    "anthropic[vertex]==0.102.0",
    "openai[aiohttp]==2.36.0",
    "prompt-toolkit==3.0.52",
    "aiohttp==3.13.5",
    "opentelemetry-distro==0.60b1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation-openai==0.52.1; python_version >= '3.10' and python_version < '4.0'",
    "opentelemetry-instrumentation-anthropic==0.52.1; python_version >= '3.10' and python_version < '4.0'",
    "opentelemetry-instrumentation-mcp==0.52.1; python_version >= '3.10' and python_version < '4.0'",
    "opentelemetry-instrumentation-google-genai==0.6b0",
    "google-genai==2.4.0",
    "deprecated==1.3.1",
    "a2a-sdk==1.0.3",
    "email-validator==2.2.0",
    "pyperclip==1.11.0",
    "keyring==25.7.0",
    "pillow>=12.1.1",
    "textual-image>=0.12.0",
    "python-frontmatter==1.1.0",
    "watchfiles==1.1.1",
    "agent-client-protocol==0.10.0",
    "jsonschema==4.26.0",
    "tiktoken==0.13.0",
    "uvloop==0.22.1; platform_system != 'Windows'",
    "multilspy==0.0.15",
    "ruamel.yaml==0.19.1",
    "huggingface_hub==1.15.0",
    "mslex==1.3.0",
]

[project.optional-dependencies]
# For Azure OpenAI with DefaultAzureCredential support, install with: uv pip install fast-agent-mcp[azure]
azure = [
    "azure-identity>=1.14.0"
]
# For AWS Bedrock support, install with: uv pip install fast-agent-mcp[bedrock]
bedrock = [
    "boto3>=1.35.0"
]
# For TensorZero gateway support, install with: uv pip install fast-agent-mcp[tensorzero]
tensorzero = [
    "tensorzero>=2025.7.5"
]
textual = [
    "textual>=6.2.1",
]
batch-parquet = [
    "duckdb>=1.4",
]
parquet = [
    "duckdb>=1.4",
]
privacy = [
    "onnxruntime>=1.25",
    "tokenizers>=0.22",
    "numpy>=2",
]
privacy-gpu = [
    "onnxruntime-gpu>=1.25",
    "nvidia-cudnn-cu12>=9; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "tokenizers>=0.22",
    "numpy>=2",
]
# For all provider support, install with: uv pip install fast-agent-mcp[all-providers]
all-providers = [
    "azure-identity>=1.14.0",
    "boto3>=1.35.0",
    "tensorzero>=2025.7.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.hatch.build]
include = [
    "src/fast_agent/**/*.py",
    "src/fast_agent/resources/**/*",
    "resources/shared/**/*",
    "src/fast_agent/py.typed",
    "examples/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_agent"]
artifacts = [
    "src/fast_agent/resources/examples/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: tests that connect to external resources (llms)",
    "integration: marks tests as integration tests",
    "simulated_endpoints: marks tests that use simulated external endpoints",
    "unit: marks tests as unit tests"
]

# Filter out utcnow depreciation warnings from the boto3 library (if installed)
# These filters are ignored if botocore is not installed
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated.*:DeprecationWarning:botocore\\.auth",
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated.*:DeprecationWarning:botocore\\.endpoint$",
]

# Other pytest options can go here too
testpaths = ["tests"]

[dependency-groups]
dev = [
    "boto3>=1.35.0",
    "multilspy>=0.0.15",
    "pre-commit>=4.0.1",
    "pydantic>=2.10.4",
    "ruamel.yaml>=0.18.0",
    "pyyaml>=6.0.2",
    "ruff>=0.8.4",
    "ty==0.0.35",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.1.1",
    "ipdb>=0.13.13",
    "mkdocs-llmstxt==0.1.0",
    "mkdocs-video>=1.5.0",
    "zensical>=0.0.40,<0.1",
]

[project.scripts]
fast-agent = "fast_agent.cli.__main__:main"
apply_patch = "fast_agent.patch.cli:main"
fast-agent-mcp = "fast_agent.cli.__main__:main"
fast-agent-acp = "fast_agent.cli.commands.acp:main"
fast-agent-hf = "fast_agent.cli.commands.hf:main"
prompt-server = "fast_agent.mcp.prompts.__main__:main"


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "TCH"  # type checking
]
ignore=["E501"]

# More lenient settings for existing code
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # Don't require type annotations in tests
# Pre-existing tech debt in fork-only spawn/* modules: debug-log scaffolding
# (F821/F841), lazy-import patterns under conditional registrations (E402),
# and forward-reference type hints needed at runtime by dataclasses
# (TC001/TC003). Cleanup is tracked separately so this sync PR doesn't
# bundle a 20-file refactor.
"src/fast_agent/spawn/**/*.py" = ["E402", "F821", "F841", "TC001", "TC003"]
"src/fast_agent/agents/tool_agent.py" = ["F821"]
"tests/unit/fast_agent/mcp/test_mcp_connection_manager.py" = ["F841"]

[tool.uv.workspace]
members = [
    "publish/fast-agent-acp",
    "publish/hf-inference-acp",
]

[tool.uv.sources]
fast-agent-mcp = { workspace = true }
fast-agent-acp = { workspace = true }
hf-inference-acp = { workspace = true }
